--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
+    "dev:stage": "vite --mode stage",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
